Fix HTML formatting and update content

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ and dedication towards achieving organizational goals.
 </p>
 
 <a href="#contact" class="btn">Hire Me</a>
-<a href="https://drive.google.com/file/d/18_BjtGG-3wguWRLSQv0lvnAabjjduViE/view?pli=1" class="btn">Download Resume</a>
+<a href="https://drive.google.com/file/d/18d3FnugyNxJM5pUunFBIbTRV0D3Nwigt/view?usp=drivesdk" class="btn">Download Resume</a>
 </div>
 </section>
 
@@ -276,4 +276,5 @@ while continuously improving my professional abilities and gaining valuable expe
 
 </body>
 </html>
+
 
